<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateAccountFragment">

    <TextView
        android:id="@+id/updateEmailView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name_placeholder"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/updateEmailView"
        app:layout_constraintStart_toStartOf="@+id/updateEmailView"
        app:layout_constraintTop_toBottomOf="@+id/updateEmailView" />

    <EditText
        android:id="@+id/updatePasswordText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/updateNameText"
        app:layout_constraintStart_toStartOf="@+id/updateNameText"
        app:layout_constraintTop_toBottomOf="@+id/updateNameText" />

    <Button
        android:id="@+id/updateSubmitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/submit_label"
        app:layout_constraintEnd_toEndOf="@+id/updatePasswordText"
        app:layout_constraintStart_toStartOf="@+id/updatePasswordText"
        app:layout_constraintTop_toBottomOf="@+id/updatePasswordText" />

    <Button
        android:id="@+id/updateCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@android:string/cancel"
        app:layout_constraintEnd_toEndOf="@+id/updateSubmitButton"
        app:layout_constraintTop_toBottomOf="@+id/updateSubmitButton" />
</androidx.constraintlayout.widget.ConstraintLayout>